[WNC-12] add APIs for get all, update, delete saved receiver
